--- a/AfficheurTournant_Partie3_Exo31/MDK-ARM/AfficheurTournant_Partie3_Exo31/AfficheurTournant_Partie3_Exo31.build_log.htm
+++ b/AfficheurTournant_Partie3_Exo31/MDK-ARM/AfficheurTournant_Partie3_Exo31/AfficheurTournant_Partie3_Exo31.build_log.htm
@@ -27,13 +27,14 @@ compiling system_stm32f0xx.c...
 compiling stm32f0xx_hal_msp.c...
 compiling stm32f0xx_it.c...
 compiling main.c...
-../Src/main.c(229): warning:  #9-D: nested comment is not allowed
-                        /*if (ligne == 1)   /* si ligne = 1  on affiche la ligne A*/
-../Src/main.c(231): warning:  #9-D: nested comment is not allowed
-                        /*else   /*sinon on affiche la ligne B*/
-../Src/main.c(125): warning:  #177-D: variable "ligne" was declared but never referenced
-        unsigned int ligne = 1;
-../Src/main.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=4420 RO-data=236 RW-data=208 ZI-data=1152  
+Program Size: Code=4428 RO-data=236 RW-data=208 ZI-data=1152  
+"AfficheurTournant_Partie3_Exo31\AfficheurTournant_Partie3_Exo31.axf" - 0 Error(s), 0 Warning(s).
+rning:  #9-D: nested comment is not allowed
+                        /*else   /*sinon on affiche la ligne B*/
+../Src/main.c: 2 warnings, 0 errors
+linking...
+Program Size: Code=4428 RO-data=236 RW-data=208 ZI-data=1152  
+"AfficheurTournant_Partie3_Exo31\AfficheurTournant_Partie3_Exo31.axf" - 0 Error(s), 2 Warning(s).
+ata=208 ZI-data=1152  
 "AfficheurTournant_Partie3_Exo31\AfficheurTournant_Partie3_Exo31.axf" - 0 Error(s), 3 Warning(s).
